--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kekstagram",
   "version": "22.0.0",
   "private": true,
+  "main": "source/index.js",
   "description": "Личный проект «Кекстаграм» от HTML Academy",
   "repository": {
     "type": "git",
@@ -12,14 +13,28 @@
   },
   "devDependencies": {
     "browser-sync": "2.26.14",
+    "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "8.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "5.1.3",
     "eslint": "7.18.0",
-    "eslint-config-htmlacademy": "2.0.0"
+    "eslint-config-htmlacademy": "2.0.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.3.1",
+    "style-loader": "2.0.0",
+    "webpack": "5.27.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3"
   },
   "license": "MIT",
   "dependencies": {},
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
-    "test": "eslint js/"
+    "test": "eslint js/",
+    "dev": "webpack --mode development",
+    "build": "webpack --config webpack.prod.js",
+    "startdev": "webpack serve --open --config webpack.dev.js"
   },
   "engines": {
     "node": ">=12.0.0"
