--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-htmlacademy": "2.0.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.1",
+    "mini-css-extract-plugin": "1.3.9",
     "style-loader": "2.0.0",
     "webpack": "5.27.0",
     "webpack-cli": "4.5.0",
@@ -28,13 +29,13 @@
     "webpack-merge": "5.7.3"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "nouislider": "^14.6.4"
+  },
   "scripts": {
-    "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
+    "start": "webpack serve --open --config webpack.dev.js",
     "test": "eslint js/",
-    "dev": "webpack --mode development",
-    "build": "webpack --config webpack.prod.js",
-    "startdev": "webpack serve --open --config webpack.dev.js"
+    "build": "webpack --config webpack.prod.js"
   },
   "engines": {
     "node": ">=12.0.0"
